--- a/style.css
+++ b/style.css
@@ -420,36 +420,28 @@ header {
 .footer-container {
     background-color: var(--dark);
     display: flex;
+    height: 10rem;
 }
 .right-footer--list, .left-footer--list {
-    margin: 0;
-    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 50%;
-    height: 10rem;
-    vertical-align: center;
 }
-.right-footer--list ul li, .left-footer--list ul li {
+.left-footer--list ul li {
     list-style: none;
     margin: .4rem auto;
 }
-.right-footer--list a {
+.left-footer--list a {
     text-decoration: none;
     color: var(--lime);
 }
-.left-footer--list ul {
-    display: flex;
-
+.left-footer--list a:hover {
+    text-decoration-line: underline;
+    text-decoration-style: wavy;
+    text-decoration-color: var(--lime);
 }
 .footer-logo {
-    background-image: url('./asset/img/logo-white.svg');
-    background-size: contain;
     width: 6rem;
-    height: 6rem;
-    display: inline-block;
-    background-repeat: no-repeat;
 }
-.copyright{
-    color: var(--lime);
-    align-self: end;
-    justify-self: end;
-}
+
