--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 html {
     font-size: 62.5%;
     font-family: 'DM Sans', sans-serif;
+    text-align: center;
 }
 header {
     position: relative;
@@ -132,10 +133,11 @@ header {
 .main__section-img {
     width: 100%;
     height: 30rem;
-    background-image: url("./asset/img/tattoo_adv.jpeg");
     background-size: cover;
 }
-.monedas {
+
+/* CSS para tabla de la clase, pero no es utilizado para el dieseño final*/
+/* .monedas {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -194,7 +196,7 @@ header {
 }
 .tabla span:nth-child(8){
     border-radius: 0 0 10px 0;
-}
+} */
 
 .main-product-detail {
     position: relative;
@@ -242,13 +244,13 @@ header {
     display: grid;
     grid-template-rows: auto;
     row-gap: 15px;
-
 }
 .main-product-detail--card {
     width: 100%;
-    min-width: 288px;
-    max-width: 400px;
+    min-width: 280px;
+    max-width: 350px;
     min-height: 15rem;
+    max-height: auto;
     background-color: var(--jet);
     padding: 10px;
     margin: 0 auto;
@@ -277,19 +279,16 @@ header {
     font-weight: normal;
 } 
 .comodin-section {
-    display: grid;
     position: relative;
-    place-items: center;
-    grid-template: inherit;
-    height: 65vh;
+    height: auto;
     width: 100%;
-
 }
 .comodin-section--img {
-    position: absolute;
-    background-size: contain;
-    height: inherit;
+
     width: 100%;
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
 }
 .comodin-section--text {
     position: absolute;
@@ -297,11 +296,13 @@ header {
     font-size: 2.5rem;
     font-weight: 700;
     text-shadow: .1rem .2rem .3rem var(--dark);
+    top: calc(50% - 16.5px);
+    right: calc(50% - 105.35px);
 }
 .plans-section {
     background-color: #5c5c5c70;
     width: 100%;
-    height: 95vh;
+    height: auto;
 }
 .plans-title-container {
     width: 90%;
@@ -323,6 +324,7 @@ header {
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
     gap: 1rem;
+    padding: 0 1rem;
 }
 .plans-section--main-plans-container::-webkit-scrollbar {
     background-color: var(--soft-lime);
