--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ header {
 .main__section-text {
     color: var(--dark);
     width: 90%;
+    display: flex;
+    flex-direction: column;
 }
 .main__section-text h2 {
     font-weight: 700;
@@ -133,6 +135,7 @@ header {
 .main__section-img {
     width: 100%;
     height: 30rem;
+    max-width: 940px;
     background-size: cover;
 }
 
